<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!-- header --> 
		<RelativeLayout
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:padding = "10dip">
	
			 <ImageButton
			 	android:id="@+id/homeButtonMilestones"
			 	android:src="@drawable/logo_small_proxy"
			 	android:background="#00ffffff"
			 	android:clickable="true"
			 	android:layout_height="wrap_content"
			 	android:layout_marginLeft="13dip" 
			    android:layout_width="wrap_content"
			    android:contentDescription="@string/logo"/>
 
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="-7dip"
				android:layout_marginTop="32dip"
			    android:src="@drawable/toggle_left" 
			    android:layout_marginBottom="5dip"
			    android:contentDescription="@string/toggle_left"/>
 
					<!-- image and border -->
					<RelativeLayout
						 android:layout_width="wrap_content"
					     android:layout_height="wrap_content"
					     android:id="@+id/bbEventImageLayout"
					     android:layout_alignParentRight="true"
					     android:layout_alignBottom="@id/homeButtonMilestones"
					     android:layout_marginLeft="5dip">

					    <ProgressBar android:indeterminate="true"
					           android:layout_width="39dip" 
					           android:layout_height="39dip"
					           android:padding="5dip"
					           android:layout_marginLeft="2dip"
					           android:layout_marginTop="2dip"
					           android:indeterminateDrawable="@drawable/loading_rotation"
					           android:layout_gravity="center_vertical|center_horizontal"
					           android:background="@drawable/rounded_corners_noimage"/>  
	 	
					 	<ImageView 
					 	 	android:id="@+id/bbChildImage"
						    android:src="@drawable/noimage" 
						    android:layout_width="39dip"
					        android:layout_height="39dip"
							android:gravity = "center"
					        android:layout_centerInParent="true"
					        android:scaleType="centerCrop"
					        android:background="@drawable/rounded_corners_noimage"
					        android:contentDescription="@string/child_picture"/>
		
						<ImageView 
						   android:layout_width="42dip"
				           android:layout_height="42dip"
				           android:background="@drawable/rounded_corners_photo"
				           android:contentDescription="@string/logo"/>
		
					</RelativeLayout> 
    
    
    
				    <TextView 
				        android:layout_width="wrap_content" 
				   		android:layout_height="wrap_content"
				   		android:id="@+id/childNameInEvent"
				   		android:textAppearance="?android:attr/textAppearanceSmall" 
				   		android:paddingLeft="10dip"
				   		android:layout_toLeftOf="@id/bbEventImageLayout"
				   		android:layout_alignBottom="@id/homeButtonMilestones"/>
				    
				    <TextView 
				       	android:textAppearance="?android:attr/textAppearanceLarge" 
				       	android:id="@+id/textViewMilestones" 
				       	android:text="@string/bbMilestones"
				       	android:layout_height="wrap_content" 
				       	android:layout_width="wrap_content" 
				       	android:paddingLeft="10dip"
				       	android:layout_toLeftOf="@id/bbEventImageLayout"
				       	android:layout_above="@id/childNameInEvent">		       	
				    </TextView>
    
		</RelativeLayout>

		<RelativeLayout
			 android:layout_width="match_parent"
		     android:layout_height="0dip"
		     android:layout_weight="1"
		     android:layout_marginTop="10dip"
		     android:layout_marginLeft="10dip"
		     android:layout_marginRight="10dip">
		
				<android.support.v4.view.ViewPager
				  android:id="@+id/bbMilestonesViewPager" 
				  android:layout_width="match_parent" 
				  android:layout_height="match_parent"
				  android:cacheColorHint="#00000000"
				  android:listSelector="#00000000"
				  android:background="@drawable/rounded_corners_kids"/>
		
				
			  	<ImageView
		 		    android:id="@+id/bbIndicatorRight"
		 		    android:layout_width="wrap_content"
		 		    android:layout_height="wrap_content" 
		 		    android:layout_alignBottom="@+id/bbMilestonesViewPager"
		 		    android:layout_alignParentRight="true"
		 		    android:src="@drawable/toggle_right"
		 		    android:visibility="invisible"
		 		    android:layout_marginBottom="5dip"
		 		    android:contentDescription="@string/toggle_right"/>
		
		  		<ImageView
		  		    android:id="@+id/bbIndicatorLeft"
		  		    android:layout_width="wrap_content"
		  		    android:layout_height="wrap_content"
		  		    android:layout_alignBottom="@+id/bbMilestonesViewPager"
		  		    android:layout_alignParentLeft="true"
		  		    android:src="@drawable/toggle_left" 
		  		    android:layout_marginBottom="5dip"
		  		    android:visibility="invisible"
		  		    android:contentDescription="@string/toggle_left"/>
		  			
		 </RelativeLayout>		    
		
	  <SeekBar
	      android:id="@+id/bbSeekBarVP"
	      android:layout_width="match_parent"
	      android:layout_height="38dip"
	      android:layout_marginLeft="10dip"
	      android:layout_marginRight="10dip"
	      android:paddingBottom="15dip"
	      android:paddingTop="15dip" />
	  
	  <!-- event interval selector -->
		  <Spinner 
		  	android:layout_width="match_parent" 
		  	android:layout_height="wrap_content" 
		  	android:id="@+id/bbMilestonesSelector"
		  	android:drawSelectorOnTop="true"
		  	android:layout_marginBottom="15dip"
		  	android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
		  	android:textAppearance="?android:attr/textAppearanceMedium"/>
  
  </LinearLayout>
